feature: add detail, update and delete api for category
